# KaleidoCell

./: .readthedocs.yaml  README.md
.github/workflows/: publish.yml
comparison/: README.md  genenmf_runtime_script.R
comparison/genenmf_docker/: Dockerfile
examples/: 01_quickstart.ipynb  02_filtering.ipynb  03_visualization_and_gsea.ipynb  04_convergence.ipynb
kaleidocell/: README.md  environment.yml  pyproject.toml
kaleidocell/docker/: Dockerfile  README.md  devcontainer.json
kaleidocell/docs/: conf.py  index.rst  installation.rst  output_files.rst  requirements.txt
kaleidocell/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  objects.inv  output_files.html  search.html  searchindex.js
kaleidocell/docs/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  output_files.doctree
kaleidocell/docs/_build/html/.doctrees/api/: index.doctree
kaleidocell/docs/_build/html/.doctrees/nbsphinx/tutorials/: 02_filtering.ipynb  03_visualization_and_gsea.ipynb
kaleidocell/docs/_build/html/.doctrees/tutorials/: 01_quickstart.doctree  02_filtering.doctree  03_visualization_and_gsea.doctree  04_convergence.doctree  05_kaleidocell_on_mouse.doctree  index.doctree
kaleidocell/docs/_build/html/_modules/: index.html
kaleidocell/docs/_build/html/_modules/kaleidocell/: consensus.html  gsea.html  report.html  visualization.html
kaleidocell/docs/_build/html/_sources/: installation.rst.txt
kaleidocell/docs/_build/html/_sources/tutorials/: 01_quickstart.ipynb.txt  index.rst.txt
kaleidocell/docs/_build/html/api/: index.html
kaleidocell/docs/_build/html/tutorials/: 01_quickstart.html  01_quickstart.ipynb  02_filtering.html  03_visualization_and_gsea.html  04_convergence.html  04_convergence.ipynb  05_kaleidocell_on_mouse.html  05_kaleidocell_on_mouse.ipynb  index.html
kaleidocell/docs/api/: index.rst
kaleidocell/docs/tutorials/: 02_filtering.ipynb  03_visualization_and_gsea.ipynb  05_kaleidocell_on_mouse.ipynb
kaleidocell/files/: README.md
kaleidocell/src/kaleidocell/: __init__.py  _bundled.py  consensus.py  gsea.py  io.py  nmf.py  report.py  utils.py  visualization.py
kaleidocell/src/kaleidocell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kaleidocell/src/kaleidocell/files/: README.md  hgnc_ensembl_translation.txt
