[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaleidocell"
version = "0.1.0"
description = "Scalable and interpretable identification of shared transcriptional programs across single-cell cohorts via consensus NMF."
readme = "README.md"
authors = [
    {name = "Jean Radig",  email = "jean.radig@bioquant.uni-heidelberg.de"},
    {name = "Carla Welz"},
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "anndata>=0.9",
    "scanpy>=1.9",
    "torch>=2.0",
    "gseapy>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kaleidocell = ["files/*.gmt", "files/*.txt"]
